# rtr-opengl

./: .gitignore  CMakeLists.txt  README.md
includes/imgui/: CMakeLists.txt
lib/: assimp.lib
src/assignment1/: main.cpp  teacup-blinn-phong.fs  teacup-cook.fs  teacup-cook.vs  teacup-flat.fs  teacup-flat.vs  teacup-toon.fs
src/assignment2/: main.cpp
src/assignment2/cube/: cube_chromatic.fs  cube_reflect.fs  cube_refract.fs  fresnel.fs  refract.fs
src/assignment2/diamond/: chromatic.fs  diamond.fs
src/assignment2/discoball/: chromatic.fs  disco_chromatic.fs
src/assignment2/ring/: chromatic.fs  fresnel.fs  refract.fs  ring_chromatic.fs  ring_reflect.fs
src/assignment3/: cube.fs  cube.vs  main.cpp
src/assignment3/metal/: shader.fs  shader.vs
src/assignment3/wood/: shader.fs
src/assignment4/: main.cpp
src/assignment4/floor/: model.fs
src/assignment5/: generator.hpp  main.cpp  ocean-BRDF.fs  ocean-BRDF.vs  ocean.fs  ocean.vs
src/utils/: AssetLoader.h  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderTypes.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h
